--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-redux": "^7.2.6",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "resolve": "^1.20.0",
